name:                dismantle-aarch64
version:             0.1.0.0
synopsis:            A disassembler and assembler for AArch64 (ARM 64-bit)
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          jtd@galois.com
copyright:           2017 Jonathan Daugherty, Tristan Ravitch
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Dismantle.AArch64
                   Dismantle.AArch64.ISA
                   Dismantle.AArch64.Random
                   Dismantle.AArch64.Operands
  build-depends:       base >= 4.8 && < 5,
                       template-haskell,
                       dismantle-tablegen,
                       dismantle-arm,
                       bytestring,
                       binary,
                       containers,
                       pretty
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite dismantle-aarch64-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base,
                 dismantle-tablegen,
                 dismantle-aarch64,
                 dismantle-arm,
                 tasty,
                 regex >= 1 && < 2,
                 pretty,
                 text
