name:                dismantle-arm
version:             0.1.0.0
synopsis:            A disassembler and assembler for ARM
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          cygnus@foobox.com
copyright:           2017 Jonathan Daugherty, Tristan Ravitch
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Dismantle.ARM
                   Dismantle.ARM.ISA
  other-modules: Dismantle.ARM.Operands
  build-depends:       base >= 4.8 && < 5,
                       template-haskell,
                       dismantle-tablegen,
                       bytestring,
                       binary,
                       pretty
  hs-source-dirs:      src
  default-language:    Haskell2010

executable extract-operand-types
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   programs
  main-is:          ExtractOperandTypes.hs
  build-depends:    base,
                    dismantle-tablegen,
                    text,
                    split,
                    containers

test-suite dismantle-arm-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base,
                 dismantle-tablegen,
                 dismantle-arm,
                 bytestring,
                 text,
                 tasty,
                 tasty-hunit
