cabal-version:       2.2

name:                dismantle-asl
version:             0.1.0.0
synopsis:            A conversion from ASL into an architecture specification
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Galois Inc.
maintainer:          dmatichuk@galois.com
copyright:           (c) Galois, Inc 2014-2019

extra-source-files:  CHANGELOG.md


common shared-properties
  default-language:    Haskell2010
  build-depends:       base >=4.10.0.0 && < 5,
                       bv-sized >= 0.7.0,
                       panic >= 0.3,
                       containers,
                       hashtables,
                       ilist,
                       bimap,
                       text >= 1 && < 2,
                       mtl,
                       transformers,
                       lens,
                       ansi-wl-pprint,
                       parameterized-utils,
                       pretty,
                       crucible,
                       what4,
                       asl-parser,
                       time,
                       vector

library
  import:              shared-properties
  exposed-modules:     Dismantle.ASL
                       Dismantle.ASL.Crucible
                       Dismantle.ASL.Extension
                       Dismantle.ASL.Exceptions
                       Dismantle.ASL.Signature
                       Dismantle.ASL.Translation
                       Dismantle.ASL.Translation.Preprocess
                       Dismantle.ASL.SyntaxTraverse
                       Dismantle.ASL.Types
                       Dismantle.ASL.StaticExpr
  hs-source-dirs:      src
  ghc-options:         -Wcompat -Wall

executable dismantle-asl-genarm
  import:              shared-properties
  main-is:             Main.hs
  build-depends:       what4-serialize,
                       filepath,
                       dismantle-asl,
                       panic >= 0.3,
                       split
  hs-source-dirs:      tools
  ghc-options:         -Wcompat -Wall

test-suite dismantle-asl-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:       base >= 4.10.0.0 && < 5,
                       asl-parser,
                       containers,
                       crucible,
                       mtl,
                       parameterized-utils,
                       dismantle-asl,
                       text >= 1 && < 2,
                       what4
