name:                dismantle-ppc
version:             0.1.0.0
synopsis:            A disassembler and assembler for PPC
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
copyright:           2016-2017 Tristan Ravitch
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Dismantle.PPC
                   Dismantle.PPC.ISA
  other-modules: Dismantle.PPC.Operands
  build-depends:       base >= 4.8 && < 5,
                       template-haskell,
                       dismantle-tablegen,
                       bytestring,
                       binary,
                       pretty
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite dismantle-ppc-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base,
                 dismantle-tablegen,
                 dismantle-ppc,
                 bytestring,
                 text,
                 tasty,
                 tasty-hunit
