name:                dismantle-tablegen
version:             0.1.0.0
synopsis:            A parser and interface to LLVM tablegen
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
copyright:           2016-2017 Tristan Ravitch
category:            Compiler
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Dismantle.Tablegen
                   Dismantle.Tablegen.ISA
                   Dismantle.Tablegen.ByteTrie
                   Dismantle.Tablegen.Combinators
                   Dismantle.Tablegen.Instruction
                   Dismantle.Tablegen.TH
                   Dismantle.Tablegen.TH.Bits
                   Dismantle.Tablegen.TH.Pretty
                   Dismantle.Tablegen.Types
                   Dismantle.Tablegen.Parser
                   Dismantle.Tablegen.Parser.Types
                   Dismantle.Testing
                   Dismantle.Testing.Parser
                   Data.Int.Indexed
                   Data.Word.Indexed
  build-depends:       base >=4.8 && <4.10,
                       ghc-prim,
                       template-haskell,
                       bytestring,
                       binary,
                       pretty,
                       deepseq >= 1.4 && < 2,
                       process,
                       located-base,
                       array,
                       case-insensitive >= 1 && < 2,
                       filemanip,
                       filepath,
                       split >= 0.2 && < 0.3,
                       containers >= 0.5 && < 0.6,
                       zlib >= 0.6 && < 0.7,
                       text >= 1 && < 2,
                       vector,
                       tasty >= 0.10 && < 0.12,
                       tasty-hunit,
                       tasty-expected-failure,
                       megaparsec >= 5 && < 6,
                       regex >= 1 && < 2,
                       mtl >= 2 && < 3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -fprof-auto

test-suite dismantle-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall -rtsopts
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules: Parser
                 Operands
                 Trie
  build-depends: dismantle-tablegen,
                 base,
                 deepseq,
                 text,
                 tasty >= 0.10 && < 0.12,
                 tasty-hunit,
                 tasty-quickcheck >= 0.8 && < 0.9,
                 filemanip,
                 directory,
                 filepath
