cabal-version:       2.2
name:                dismantle-tablegen
version:             0.1.0.0
synopsis:            A parser and interface to LLVM tablegen
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
copyright:           2016-2021 Tristan Ravitch
category:            Compiler
build-type:          Simple
extra-source-files:  ChangeLog.md

common bldflags
  default-language:    Haskell2010
  ghc-options: -Wcompat
               -Wall
               -fno-ignore-asserts
  ghc-prof-options: -fprof-auto

library
  import: bldflags
  exposed-modules: Dismantle.Arbitrary
                   Dismantle.Instruction
                   Dismantle.Instruction.Random
                   Dismantle.Tablegen
                   Dismantle.Tablegen.ISA
                   Dismantle.Tablegen.BitTrie
                   Dismantle.Tablegen.LinearizedTrie
                   Dismantle.Tablegen.Combinators
                   Dismantle.Tablegen.Patterns
                   Dismantle.Tablegen.TH
                   Dismantle.Tablegen.TH.Bits
                   Dismantle.Tablegen.TH.Capture
                   Dismantle.Tablegen.TH.CaptureInfo
                   Dismantle.Tablegen.TH.Pretty
                   Dismantle.Tablegen.Types
                   Dismantle.Tablegen.Parser
                   Dismantle.Tablegen.Parser.Types
                   Dismantle.Testing
                   Dismantle.Testing.Parser
                   Dismantle.Testing.ParserTests
                   Dismantle.Testing.Regex
                   Data.EnumF
                   Data.Int.Indexed
                   Data.Parameterized.HasRepr
                   Data.Parameterized.Lift
                   Data.Set.NonEmpty
                   Data.Word.Indexed
  build-depends:       base >=4.10 && <5,
                       ghc-prim,
                       template-haskell,
                       th-abstraction >= 0.2 && < 0.7,
                       bytestring,
                       binary,
                       pretty,
                       deepseq >= 1.4 && < 2,
                       process,
                       mwc-random >= 0.13 && < 0.15,
                       case-insensitive >= 1 && < 2,
                       filemanip,
                       filepath,
                       directory,
                       split >= 0.2 && < 0.3,
                       containers,
                       hashable,
                       unordered-containers,
                       zlib >= 0.6 && < 0.7,
                       text >= 1 && < 2.2,
                       vector,
                       tasty >= 0.10,
                       tasty-hunit,
                       tasty-expected-failure,
                       megaparsec >= 7 && < 10,
                       regex-base >= 0.94,
                       regex-tdfa >= 1.3.1 && < 1.4,
                       mtl >= 2 && < 3,
                       parameterized-utils >= 1 && < 2.2,
                       SHA >= 1.6 && < 1.7
  hs-source-dirs:      src

test-suite dismantle-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wcompat -Wall -rtsopts
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules: Operands
                 Trie
                 WordIndexed
  build-depends: base
               , bytestring
               , deepseq
               , directory
               , dismantle-tablegen
               , filemanip
               , filepath
               , parameterized-utils
               , pretty
               , regex-tdfa
               , text
               , tasty >= 0.10
               , tasty-hunit
               , tasty-quickcheck >= 0.8 && <= 0.11
