name:                dismantle-thumb
version:             0.1.0.0
synopsis:            A disassembler and assembler for ARM's Thumb instruction set
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          jtd@galois.com
copyright:           2017 Jonathan Daugherty, Tristan Ravitch
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Dismantle.Thumb
                   Dismantle.Thumb.ISA
                   Dismantle.Thumb.Random
  other-modules: Dismantle.Thumb.Operands
  build-depends:       base >= 4.8 && < 5,
                       template-haskell,
                       dismantle-tablegen,
                       dismantle-arm,
                       bytestring,
                       binary,
                       containers,
                       pretty
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite dismantle-thumb-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base,
                 dismantle-tablegen,
                 dismantle-thumb,
                 tasty,
                 regex >= 1 && < 2,
                 pretty,
                 text
